crates/parser/src/snapshots/squawk_parser__parse__tests__define_stmt-2.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: DefineStmt(
                Object({
                    "definition": Array([
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            37,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "box",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "leftarg",
                                ),
                                "location": Number(
                                    27,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            57,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "box",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "rightarg",
                                ),
                                "location": Number(
                                    46,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            78,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "area_equal_procedure",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "procedure",
                                ),
                                "location": Number(
                                    66,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "List": Object({
                                        "items": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "===",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "commutator",
                                ),
                                "location": Number(
                                    104,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "List": Object({
                                        "items": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "!==",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "negator",
                                ),
                                "location": Number(
                                    126,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            156,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "area_restriction_procedure",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "restrict",
                                ),
                                "location": Number(
                                    145,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            195,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "area_join_procedure",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "join",
                                ),
                                "location": Number(
                                    188,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "hashes",
                                ),
                                "location": Number(
                                    220,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "merges",
                                ),
                                "location": Number(
                                    228,
                                ),
                            }),
                        }),
                    ]),
                    "defnames": Array([
                        Object({
                            "String": Object({
                                "sval": String(
                                    "===",
                                ),
                            }),
                        }),
                    ]),
                    "kind": String(
                        "OBJECT_OPERATOR",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                236,
            ),
        },
    ],
)
