crates/parser/src/snapshots/squawk_parser__parse__tests__discard_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: DiscardStmt(
                Object({
                    "target": String(
                        "DISCARD_PLANS",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                14,
            ),
        },
        RawStmt {
            stmt: DiscardStmt(
                Object({
                    "target": String(
                        "DISCARD_SEQUENCES",
                    ),
                }),
            ),
            stmt_location: 15,
            stmt_len: Some(
                18,
            ),
        },
        RawStmt {
            stmt: DiscardStmt(
                Object({
                    "target": String(
                        "DISCARD_TEMP",
                    ),
                }),
            ),
            stmt_location: 34,
            stmt_len: Some(
                13,
            ),
        },
    ],
)
