crates/parser/src/snapshots/squawk_parser__parse__tests__drop_subscription_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: DropSubscriptionStmt(
                Object({
                    "behavior": String(
                        "DROP_RESTRICT",
                    ),
                    "subname": String(
                        "mysub",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                24,
            ),
        },
    ],
)
