crates/parser/src/snapshots/squawk_parser__parse__tests__drop_user_mapping_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: DropUserMappingStmt(
                Object({
                    "missing_ok": Bool(
                        true,
                    ),
                    "servername": String(
                        "foo",
                    ),
                    "user": Object({
                        "location": Number(
                            32,
                        ),
                        "rolename": String(
                            "bob",
                        ),
                        "roletype": String(
                            "ROLESPEC_CSTRING",
                        ),
                    }),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                46,
            ),
        },
    ],
)
