crates/parser/src/snapshots/squawk_parser__parse__tests__listen_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: ListenStmt(
                Object({
                    "conditionname": String(
                        "virtual",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                15,
            ),
        },
    ],
)
