crates/parser/src/snapshots/squawk_parser__parse__tests__load_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: LoadStmt(
                Object({
                    "filename": String(
                        "filename",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                16,
            ),
        },
    ],
)
