crates/parser/src/snapshots/squawk_parser__parse__tests__parse_alter_collation_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: RenameStmt(
                RenameStmt {
                    newname: "new_name",
                    behavior: Restrict,
                    relation: None,
                    relation_type: AccessMethod,
                    rename_type: Collation,
                    subname: None,
                },
            ),
            stmt_location: 0,
            stmt_len: Some(
                39,
            ),
        },
    ],
)
