crates/parser/src/snapshots/squawk_parser__parse__tests__parse_create_schema_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: CreateSchemaStmt(
                Object({
                    "schemaname": String(
                        "schema_name",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                25,
            ),
        },
    ],
)
